# building-http-server

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile
.github/workflows/: ci.yml
docs/: 2026-06-02-socket-refactoring.md  2026-06-05-graceful-shutdown.md  2026-06-07-socket-unit-tests.md  2026-06-08-nonblocking-io.md  2026-06-09-epoll-multiplexing.md  2026-06-14-eventloop-connection-refactor.md  2026-06-15-write-backpressure.md  2026-06-27-self-pipe-wakeup.md  2026-06-30-integration-tests.md  2026-07-02-http-request-parser.md  2026-07-05-http-header-parsing.md  2026-07-06-incremental-parsing.md  2026-07-12-parser-hardening.md  2026-07-13-test-parameterization.md  2026-07-21-string-view-request-line.md  2026-07-22-parser-server-integration.md  README.md  _TEMPLATE.md
include/: connection.h  event_loop.h  socket.h
include/http/: HttpRequest.h  HttpRequestParser.h  HttpUtil.h
src/: CMakeLists.txt  calculator.cpp  calculator.h  connection.cpp  event_loop.cpp  main.cpp  socket.cpp
src/http/: HttpRequestParser.cpp
tests/: CMakeLists.txt  HttpRequestParserTest.cpp  tests.cpp
tests/integration/: CMakeLists.txt  echo_client.cpp
